# inc

./: .gitignore  Anchor.toml  Readme.md  cR.json  inst.js  instructions.md  package-lock.json  package.json  tailwind.config.js  test.json  tsconfig.json
app/: .env  main.ts  root.tsx  tailwind.css
app/components/: Createcompany.tsx  GetCompanyList.tsx  Init.tsx
app/lib/: incFactory.ts
app/pages/: _app.tsx  landing.tsx
app/routes/: _index.tsx
programs/inc/: Cargo.toml
programs/inc-factory/: Cargo.toml
programs/inc-factory/src/: _depr.rs  errors.rs  lib.rs  main.rs
programs/inc-factory/src/instructions/: initialize_registry.rs  mod.rs  register_company.rs  remove_company.rs
programs/inc-factory/src/state/: company_registry.rs  mod.rs
programs/inc/src/: errors.rs  lib.rs
programs/inc/src/instructions/: initialize_company.rs  mod.rs  shareholders.rs  treasury.rs  update_company_name.rs  update_jurisdiction.rs  voters.rs
programs/inc/src/state/: mod.rs
tests/: inc-factory.test.ts  inc-factory.ts  inc.ts
